--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "precommit": "yarn run prettier:fix && yarn run lint:fix && yarn run tsc",
+    "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" --check \"src/**/*.tsx\" ",
+    "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
+    "tsc": "tsc"
   },
   "keywords": [
     "react-native"
