--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "peerDependencies": {
     "@react-native-firebase/analytics": ">=6.3.4",
     "@react-native-firebase/app": ">=6.3.4",
+    "@sentry/react-native": ">=1.3.0",
     "react": "^16.8.1",
     "react-native": ">=0.60.0-rc.0 <1.0.x",
     "reactotron-react-native": ">=4.0.0",
