--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
+    "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
     "precommit": "yarn run prettier:fix && yarn run lint:fix && yarn run tsc",
     "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" --check \"src/**/*.tsx\" ",
-    "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
+    "test": "jest",
+    "testu": "node_modules/.bin/jest --updateSnapshot --i",
     "tsc": "tsc"
   },
   "keywords": [
@@ -25,7 +27,14 @@
     "reactotron-redux": ">=3.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.8.3",
+    "babel-jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "jest": "^25.1.0",
     "react": "^16.9.0",
+    "react-dom": "^16.13.0",
     "react-native": "^0.61.5",
     "reactotron-react-native": "4.0.2",
     "reactotron-redux": "^3.1.2",
@@ -35,5 +44,41 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.2.0",
     "typescript": "^3.7.3"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true,
+    "preset": "react-native",
+    "setupFiles": [
+      "./jest.setup.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "transform": {
+      "\\.(js|jsx|ts|tsx)$": "./node_modules/babel-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "transformIgnorePatterns": [
+      "./node_modules/(?!react-native|react-navigation|react-navigation-stack|reactotron-react-native|react-native-localize)/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 100.00,
+        "branches": 100.00,
+        "functions": 100.00,
+        "lines": 100.00
+      }
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
+  "dependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.1.4"
   }
 }
