--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "@react-native-firebase/analytics": ">=6.3.4",
+    "@react-native-firebase/crashlytics": ">=6.3.4",
     "@react-native-firebase/app": ">=6.3.4",
     "@sentry/react-native": ">=1.3.0",
     "react": "^16.8.1",
