improve npm ignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,15 @@
-.vscode
-coverage
+coverage/
 build
 scripts
-node_modules
 shell
+src/__tests__
+node_modules
+.vscode
 .watchmanconfig
 .eslintignore
 .github
+.idea
+
+CHANGELOG.md
+CONTRIBUTING.md
 README.md
-src/__tests__
