--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,16 @@
-.vscode
-coverage
+coverage/
 build
-ios
-android
 scripts
-node_modules
 shell
+src/__tests__
+node_modules
+.vscode
 .watchmanconfig
 .eslintignore
+.github
+.idea
+
+CHANGELOG.md
+CONTRIBUTING.md
+REFERENCE_API.md
 README.md
