--- a/package.json
+++ b/package.json
@@ -1,30 +1,55 @@
 {
-  "name": "react-native-logging",
-  "title": "Custom React Native Logging",
+  "name": "react-native-logging-tools",
+  "title": "React Native library created to ease logging",
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "precommit": "yarn run prettier:fix && yarn run lint:fix && yarn run tsc",
-    "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" --check \"src/**/*.tsx\" ",
+    "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" ",
     "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
+    "precommit": "yarn run prettier:fix && yarn run lint:fix && yarn run tsc",
+    "test": "jest",
+    "testu": "node_modules/.bin/jest --updateSnapshot --i",
     "tsc": "tsc"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "react-component",
+    "react-native-component",
+    "react native",
+    "hybrid",
+    "mobile",
+    "ios",
+    "android",
+    "logging",
+    "analytics",
+    "typescript"
   ],
-  "author": "",
-  "license": "",
+  "author": "Imran Mentese & Martin VanLerberghe",
+  "license": "UNLICENSED",
   "readmeFilename": "README.md",
+  "bugs": {
+    "url": "https://github.com/imranMnts/react-native-logging-tools/issues"
+  },
+  "homepage": "https://github.com/imranMnts/react-native-logging-tools#readme",
   "peerDependencies": {
-    "@react-native-firebase/analytics": ">=6.3.4",
-    "@react-native-firebase/app": ">=6.3.4",
+    "@react-native-firebase/analytics": ">=6.0.0",
+    "@react-native-firebase/app": ">=6.0.0",
+    "@react-native-firebase/crashlytics": ">=6.0.0",
+    "@sentry/react-native": ">=1.3.0",
     "react": "^16.8.1",
     "react-native": ">=0.60.0-rc.0 <1.0.x",
     "reactotron-react-native": ">=4.0.0",
     "reactotron-redux": ">=3.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.8.3",
+    "babel-jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "jest": "^25.1.0",
     "react": "^16.9.0",
+    "react-dom": "^16.13.0",
     "react-native": "^0.61.5",
     "reactotron-react-native": "4.0.2",
     "reactotron-redux": "^3.1.2",
@@ -34,5 +59,41 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.2.0",
     "typescript": "^3.7.3"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true,
+    "preset": "react-native",
+    "setupFiles": [
+      "./jest.setup.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "transform": {
+      "\\.(js|jsx|ts|tsx)$": "./node_modules/babel-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "transformIgnorePatterns": [
+      "./node_modules/(?!react-native|react-navigation|react-navigation-stack|reactotron-react-native|react-native-localize)/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 100,
+        "branches": 100,
+        "functions": 100,
+        "lines": 100
+      }
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
+  "dependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.1.4"
   }
 }
