--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-native-firebase/app": ">=6.0.0",
     "@react-native-firebase/crashlytics": ">=6.0.0",
     "@sentry/react-native": ">=1.3.0",
+    "instabug-reactnative": ">=9.0.0",
     "react": "^16.8.1",
     "react-native": ">=0.60.0-rc.0 <1.0.x",
     "reactotron-react-native": ">=4.0.0",
