--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "title": "React Native library created to ease logging",
   "version": "1.0.0",
   "main": "src/index.ts",
+  "typings": "index.d.ts",
   "scripts": {
     "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" ",
     "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
