--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-logging-tools",
   "title": "React Native library created to ease logging",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "src/index.ts",
   "typings": "index.d.ts",
   "scripts": {
@@ -33,6 +33,8 @@
   },
   "homepage": "https://github.com/imranMnts/react-native-logging-tools#readme",
   "peerDependencies": {
+    "@adobe/react-native-acpcore": ">=1.2.4",
+    "@adobe/react-native-acpanalytics": ">=1.1.6",
     "@react-native-firebase/analytics": ">=6.0.0",
     "@react-native-firebase/app": ">=6.0.0",
     "@react-native-firebase/crashlytics": ">=6.0.0",
@@ -41,7 +43,8 @@
     "react": "^16.8.1",
     "react-native": ">=0.60.0-rc.0 <1.0.x",
     "reactotron-react-native": ">=4.0.0",
-    "reactotron-redux": ">=3.0.0"
+    "reactotron-redux": ">=3.0.0",
+    "tealium-react-native": ">=1.0.10"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.8.3",
