IM-0 - upgrade package

--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "jest": "^25.1.0",
-    "react": "^16.9.0",
+    "react": "16.13.1",
     "react-dom": "^16.13.0",
-    "react-native": "^0.61.5",
+    "react-native": "0.63.0",
     "reactotron-react-native": "4.0.2",
     "reactotron-redux": "^3.1.2",
     "ts-jest": "^25.0.0",
