--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.1.0",
   "main": "src/index.ts",
   "typings": "index.d.ts",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "scripts": {
     "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" ",
     "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
@@ -43,6 +42,7 @@
     "instabug-reactnative": ">=9.0.0",
     "react": "^16.8.1",
     "react-native": ">=0.60.0-rc.0 <1.0.x",
+    "react-native-flipper": ">=0.50.0",
     "reactotron-react-native": ">=4.0.0",
     "reactotron-redux": ">=3.0.0",
     "tealium-react-native": ">=1.0.10"
@@ -57,6 +57,7 @@
     "react": "16.13.1",
     "react-dom": "^16.13.0",
     "react-native": "0.63.0",
+    "react-native-flipper": "^0.50.0",
     "reactotron-react-native": "4.0.2",
     "reactotron-redux": "^3.1.2",
     "ts-jest": "^25.0.0",
@@ -84,7 +85,7 @@
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "transformIgnorePatterns": [
-      "./node_modules/(?!react-native|react-navigation|react-navigation-stack|reactotron-react-native|react-native-localize)/"
+      "./node_modules/(?!react-native)/"
     ],
     "coverageThreshold": {
       "global": {
