--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" ",
     "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
     "precommit": "yarn run prettier:fix && yarn run lint:fix && yarn run tsc",
-    "test": "jest",
-    "testu": "node_modules/.bin/jest --updateSnapshot --i",
+    "test": "TZ=UTC jest",
+    "testu": "TZ=UTC node_modules/.bin/jest --updateSnapshot --i",
     "tsc": "tsc"
   },
   "keywords": [
