IM-0 - add lint check to travis

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "index.d.ts",
   "scripts": {
     "prettier:fix": "prettier --config ./.prettierrc.js --write --check \"src/**/*.ts\" ",
+    "lint": "tslint -p tsconfig.json 'src/**/*.tsx' 'src/**/*.ts'",
     "lint:fix": "tslint -p tsconfig.json --fix 'src/**/*.tsx' 'src/**/*.ts'",
     "precommit": "yarn run prettier:fix && yarn run lint:fix && yarn run tsc",
     "test": "TZ=UTC jest",
