--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 install:
   - yarn
 script:
+  - yarn run tsc
+  - yarn run lint
   - yarn run test
 after_success:
   - npm run test:cov && bash <(curl -s https://codecov.io/bash) -e TRAVIS_NODE_VERSION
