--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - yarn
 script:
   - yarn run tsc
+  - yarn run lint
   - yarn run test
 after_success:
   - npm run test:cov && bash <(curl -s https://codecov.io/bash) -e TRAVIS_NODE_VERSION
